# IRService

./: .gitignore  CMakeLists.txt  README.md  _config.yml
src/irservice/: CMakeLists.txt  MPlayerX.cpp  MPlayerX.h  Sound.cpp  Sound.h  Spotify.cpp  Spotify.h  UnixSerial.cpp  UnixSerial.h  Util.cpp  Util.h  VLC.cpp  VLC.h  main.cpp  setting.ini  setting_mce.ini  setting_sony.ini
